Added server and improved readme

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "tetris",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
+    "start": "node server.js",
     "build": "tsc && ts-add-js-extension --dir dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "express": "^5.1.0",
     "ts-add-js-extension": "^1.6.6",
     "typescript": "^5.9.3"
   }
